Allow selecting directories in KFileWidget

Removes the restriction on not being able to select directories in KFileWidget. If user selects a directory but isn't in directory mode, then slotOk will take care of it.

Required for folder selection via xdg-desktop-portal-kde (eg in Firefox, Flatpaks, etc) to work properly. See also https://invent.kde.org/plasma/xdg-desktop-portal-kde/commit/976d0c5fade9c24a939e00fcf8708b0ae6e11402

BUG: 419874